# wordle-analysis

./: CMakeLists.txt  a.out  main  main.cpp  main2  main2.cpp  possible.txt
dictionary/: main  possible.txt  sim.py  spellbee.cpp
